<package format="2">
 <name>dvo_core</name>
  <version>0.1.0</version>
  <description>
    dvo_core
  </description>
  <maintainer email="christian.kerl@in.tum.de">Christian Kerl</maintainer>
  <license>GPL</license>

  <url>https://github.com/tum-vision/dvo_slam</url>
  <author>Christian Kerl</author>
  <buildtool_depend>catkin</buildtool_depend>
  <depend>cmake_modules</depend>

  <depend>pcl_ros</depend>
  <depend>pcl_conversions</depend>
  <depend>sophus</depend>

  
</package>
