<package format="2">
  <name>dvo_ros</name>
  <version>0.1.0</version>
  <description>
    dvo_ros
  </description>
  <maintainer email="christian.kerl@in.tum.de">Christian Kerl</maintainer>
  <license>GPL</license>

  <url>https://github.com/tum-vision/dvo_slam</url>
  <author>Christian Kerl</author>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>cmake_modules</depend>

  <depend>libpcl-all-dev</depend>
  <depend>libopencv-dev</depend>
  <depend>roscpp</depend>
  <depend>tf</depend>
  <depend>tf_conversions</depend>
  <depend>eigen_conversions</depend>
  <depend>dynamic_reconfigure</depend>
  <depend>nav_msgs</depend>
  <depend>dvo_core</depend>

  <depend>sensor_msgs</depend>
  <depend>image_transport</depend>
  <depend>message_filters</depend>
  <depend>cv_bridge</depend>
  <depend>visualization_msgs</depend>
  <depend>interactive_markers</depend>
  <depend>pcl_ros</depend>
    
  <export>
    <dvo_ros_package plugin="${prefix}/nodelet_plugins.xml" />
  </export>

</package>
