<package format="2">
  <name>dvo_slam</name>
  <version>0.1.0</version>
  <description>
    dvo_slam
  </description>
  <maintainer email="christian.kerl@in.tum.de">Christian Kerl</maintainer>
  <license>GPL</license>

  <url>https://github.com/tum-vision/dvo_slam</url>
  <author>Christian Kerl</author>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>cmake_modules</depend>

  <depend>libpcl-all-dev</depend>
  <depend>libopencv-dev</depend>
  <depend>libg2o</depend>
  <depend>roscpp</depend>
  <depend>dynamic_reconfigure</depend>
  <depend>message_runtime</depend>
  <depend>dvo_core</depend>
  <depend>dvo_ros</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>image_transport</depend>
  <depend>message_filters</depend>
  <depend>cv_bridge</depend>
  <depend>visualization_msgs</depend>
  <depend>interactive_markers</depend>
  <depend>std_msgs</depend>
</package>